--- a/adminuser/files/assets/css/registrasi.css
+++ b/adminuser/files/assets/css/registrasi.css
@@ -9,23 +9,23 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #48e248;
+    color: blue;
 }
 
 .login-form{
     width: 700px;
-    height: 800px;
+    height: 900px;
     padding:70px;
-    background-color: #1a2226 !important;
+    background-color: #fff !important;
     border-radius: 10px !important;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="password"]{
-    background: #1a2226;
+    background: white;
     color: #fff;
-    border: 2px solid #00ff00;
+    border: 2px solid lightblue;
     border-radius: 10px;
     margin-bottom: 50px;
     margin-top: 10;
@@ -36,7 +36,7 @@ input[type="email"]:focus,
 input[type="password"]:focus{
     outline: none;
     border: none;
-    background: #1a2226;
+    background: white;
     color: #fff;
     margin: 0;
 }
@@ -47,7 +47,7 @@ input[type="password"]:focus{
 }
 
 .btn{
-    background: #48e248 !important;
+    background: lightblue !important;
     color: #000 !important;
     transform: translate(10px);
     font-size: 14px;
